# Plant_Disease_Detection

./: AGENTS.md  README.md  evaluate.py  model.py  predict.py  pyproject.toml  requirements.txt  train.py
backend/: app.py  config.py  pyproject.toml
backend/models/: model_builder.py
backend/routes/: evaluate.py  predict.py  train.py
backend/services/: eval_service.py  predict_service.py  train_service.py
backend/utils/: dataset.py  transforms.py
frontend/src/: App.jsx
frontend/src/api/: api.js
frontend/src/components/: Evaluate.jsx  Navbar.jsx  Predict.jsx  Train.jsx
frontend/src/pages/: Dashboard.jsx
frontend/src/styles/: app.css
splits/: test_idx.pt  train_idx.pt  val_idx.pt
